update in `index.html`

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <script defer src="script.js"></script>
     <title>Real-time Charater Counter</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Real-time Charater Counter</h1>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+  </body>
 </html>
