add tag textarea

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Real-time Charater Counter</h1>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="text-area" cols="30" rows="10"></textarea>
   </body>
 </html>
