--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Real-time Charater Counter</title>
   </head>
   <body>
-    <h1>Real-time Charater Counter</h1>
-    <textarea name="" id="text-area" cols="30" rows="10"></textarea>
+    <div class="container">
+      <h1>Real-time Charater Counter</h1>
+      <textarea name="" id="text-area" cols="30" rows="10"></textarea>
+      <div class="info-container">
+        <p>Total Charaters: <span class="total-char">50</span></p>
+        <p>Remaining: <span class="remaining">0</span></p>
+      </div>
+    </div>
   </body>
 </html>
