implementaçao do `script.js` e modificações no `index.html` e `style.css`

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
   <body>
     <div class="container">
       <h1>Real-time Charater Counter</h1>
-      <textarea name="" id="text-area" cols="30" rows="10"></textarea>
+      <textarea
+        name=""
+        id="text-area"
+        cols="30"
+        rows="10"
+        placeholder="Escreva uma mensagem aqui..."
+      ></textarea>
       <div class="info-container">
-        <p>Total Charaters: <span class="total-char">50</span></p>
-        <p>Remaining: <span class="remaining">0</span></p>
+        <p>Total Charaters - <span class="total-char">0</span></p>
+        <span>/</span>
+        <p><span class="remaining">150</span> - Remaining</p>
       </div>
     </div>
   </body>
