update in textarea `index.html`

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         id="text-area"
         cols="30"
         rows="10"
+        autofocus
         placeholder="Escreva uma mensagem aqui..."
       ></textarea>
       <div class="info-container">
         <p>Total Charaters - <span class="total-char">0</span></p>
         <span>/</span>
-        <p><span class="remaining">150</span> - Remaining</p>
+        <p><span class="remaining">50</span> - Remaining</p>
       </div>
     </div>
   </body>
